ホームページの追加

--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -2,11 +2,11 @@
   .row
     %aside.col-md-4
       %section.trend
-        = Trend
+        Trend
       %section.feed_ranking
-        = FeedRanking
+        FeedRanking
       %section.TagRanking
-        = TagRanking
+        TagRanking
     .col-md-8
       = render 'users/feed'
 - else
