--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@user,@item] do |f|
+= form_for [current_user,@item] do |f|
   - if @item.errors.any?
     #error_explanation
       %h2= "#{pluralize(@item.errors.count, "error")} prohibited this item from being saved:"
