--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,2 +1,9 @@
-%h1 Users#index
-%p Find me in app/views/users/index.html.haml
+%h1 ユーザー一覧
+- if @users.any?
+  %ol.list-group
+  - @users.each do | user|
+    %li.list-group-item
+      = link_to user.email, user
+      - if current_user == user
+        %span.badge.badge-primary ME!
+
