--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -7,6 +7,8 @@
         FeedRanking
       %section.TagRanking
         TagRanking
+      %section.stats
+        = render 'shared/stats'
     .col-md-8
       = render template: 'items/index'
 - else
