--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -5,5 +5,5 @@
       %li.list-group-item
         = link_to item.title, user_item_path(item.user, item)
         %br
-        .tag_list= render 'items/tag_list', tag_list: item.tag_list
+        .tag_list= render 'items/tag_list', tag_list: item.tags
   = paginate @items
