--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,9 +1,6 @@
 - if @items.any?
   = paginate @items
   %ol.list-group
-    - @items.each do |item|
-      %li.list-group-item
-        = link_to item.title, user_item_path(item.user, item)
-        %br
-        .tag_list= render 'items/tag_list', tag_list: item.tags
+  - @items.each do |item|
+    = render item
   = paginate @items
